[package]
name = "ydcv"
version = "0.3.0"
edition = "2021"
authors = ["passchaos"]

[dependencies]
serde = "*"
serde_json = "*"
serde_derive = "*"
ansi_term = "*"
redb = "0.9.0"
reqwest = { version = "0.11.12", features = ["rustls-tls", "json"], default_features = false }
anyhow = "1.0.66"
dirs = "4.0.0"
tokio = { version = "1.21.2", features = ["full"] }
termcolor = "1.1.3"
clap = { version = "4.0.22", features = ["derive"] }
