[package]
name = "ydcv"
version = "0.3.0"
edition = "2021"
authors = ["passchaos"]

[dependencies]
serde = "*"
serde_json = "1.0.89"
serde_derive = "*"
ansi_term = "*"
redb = "0.9.0"
reqwest = { version = "0.11.12", features = ["rustls-tls", "json", "stream"], default-features = false }
anyhow = "1.0.66"
dirs = "4.0.0"
tokio = { version = "1.21.2", features = ["full"] }
termcolor = "1.1.3"
clap = { version = "4.0.22", features = ["derive", "cargo"] }
once_cell = "1.16.0"
arboard = "3.2.0"
parking_lot = "0.12.1"
chinese_detection = "2.0.3"
tempdir = "0.3.7"
tokio-util = "0.7.4"
tokio-stream = "0.1.11"
rodio = "0.16.0"
