[package]
name = "ydcv"
version = "0.3.0"
edition = "2021"
authors = ["passchaos"]

[dependencies]
serde = "*"
serde_json = "*"
serde_derive = "*"
ansi_term = "*"
redb = "*"
reqwest = { version = "*", features = ["rustls-tls", "json", "stream"], default-features = false }
anyhow = "*"
dirs = "*"
tokio = { version = "*", features = ["full"] }
termcolor = "*"
clap = { version = "*", features = ["derive", "cargo"] }
once_cell = "*"
arboard = "*"
parking_lot = "*"
chinese_detection = "*"
tempfile = "*"
tokio-util = "*"
tokio-stream = "*"
rodio = "*"
ydcv-rs = "0.5.2"
